--- a/README
+++ b/README
@@ -42,6 +42,10 @@
   (3)puttextが、colorで指定した色では表示しない。
      (色をつけるにはputcolorと併用する必要がある)
 
+  (4)リダイレクトには非対応(エラーになる)。
+
+  (5)Windows8上のGauche v0.9.3.3では、しばらく動いた後に実行時エラーが出る。
+
 
 5.環境等
   OS   : Windows XP Home SP3
@@ -52,6 +56,7 @@
 
 6.履歴
 2014-6-22 v1.00 (初版)
+2014-6-22 v1.01 コメント修正のみ
 
 
 (2014-6-22)
