--- a/README
+++ b/README
@@ -35,7 +35,8 @@
 
 
 4.注意事項
-  (1)writeやdisplayが、指定したカーソル位置に表示しない(原因不明)。
+  (1)writeやdisplayが、指定したカーソル位置に表示しない。
+     → flush すれば表示される。
 
   (2)最下行にprintで表示すると、改行のためスクロールしてしまう。
 
@@ -44,7 +45,7 @@
 
   (4)リダイレクトには非対応(エラーになる)。
 
-  (5)Windows8上のGauche v0.9.3.3では、しばらく動いた後に実行時エラーが出る。
+  (5)Windows8上のGauche v0.9.3.3では、しばらく動いた後に実行時エラーが出る(原因不明)。
 
 
 5.環境等
@@ -57,6 +58,7 @@
 6.履歴
 2014-6-22 v1.00 (初版)
 2014-6-22 v1.01 コメント修正のみ
+2014-6-23 v1.02 コメント修正のみ
 
 
-(2014-6-22)
+(2014-6-23)
