--- a/README
+++ b/README
@@ -45,7 +45,7 @@
 
   (4)リダイレクトには非対応(エラーになる)。
 
-  (5)Windows8上のGauche v0.9.3.3では、しばらく動いた後に実行時エラーが出る(原因不明)。
+  (5)Windows 8上のGauche v0.9.3.3では、しばらく動いた後に実行時エラーが出る(原因不明)。
 
 
 5.環境等
@@ -59,6 +59,7 @@
 2014-6-22 v1.00 (初版)
 2014-6-22 v1.01 コメント修正のみ
 2014-6-23 v1.02 コメント修正のみ
+2014-6-23 v1.03 keywait2の処理を修正
 
 
 (2014-6-23)
