--- a/README
+++ b/README
@@ -60,6 +60,8 @@
 2014-6-22 v1.01 コメント修正のみ
 2014-6-23 v1.02 コメント修正のみ
 2014-6-23 v1.03 keywait2の処理を修正
+2014-6-23 v1.04 cls2の処理を修正
+                (sys-fill-console-output-characterの引数型変更(文字列→文字))
 
 
 (2014-6-23)
